<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ubusetas.ubu.adrian.proyectoubusetas.clavedicotomica.MostrarClaves"
    tools:showIn="@layout/layout_mostrar_claves">

    <TextView
        android:id="@+id/textView_contenido_mostrar_claves"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_informativo_mostrar_claves"

        android:textColor="@color/black" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_lista_claves"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/textView_contenido_mostrar_claves"
        android:layout_marginTop="16dp"
        android:scrollbars="vertical" />

</RelativeLayout>