...
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/boton_clasificar_lanzadora"
        android:layout_centerHorizontal="true"
        app:srcCompat="@android:drawable/ic_menu_info_details" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/boton_ir_claves_lanzadora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/boton_ir_setas_lanzadora"
        android:layout_marginEnd="16dp"
...
